--- a/DotNetFrameworkApp.Worker.WebApp/Controllers/Views/HelloWorld/Index.cshtml
+++ b/DotNetFrameworkApp.Worker.WebApp/Controllers/Views/HelloWorld/Index.cshtml
@@ -1,5 +1,17 @@
 @{
-    ViewBag.Title = "Hello World";
+    Layout = null;
 }
 
-<h1>Hello, Q2 world! This Is Vitale Mazo</h1>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Hello World</title>
+</head>
+<body>
+    <div>
+        Hello World!
+    </div>
+</body>
+</html>
