--- a/DotNetFrameworkApp.Worker.WebApp/Views/HelloWorld/Index.cshtml
+++ b/DotNetFrameworkApp.Worker.WebApp/Views/HelloWorld/Index.cshtml
@@ -11,7 +11,9 @@
 </head>
 <body>
     <div>
-        Hello World!
+        Hello Q2 Folks Michael Pack, Joe Hajovsky, Michael Schaefer!
     </div>
+
+    <iframe src="https://www.google.com/logos/2010/pacman10-i.html" width="800" height="600"></iframe>
 </body>
 </html>
