--- a/DotNetFrameworkApp.Worker.WebApp/Views/HelloWorld/Index.cshtml
+++ b/DotNetFrameworkApp.Worker.WebApp/Views/HelloWorld/Index.cshtml
@@ -7,11 +7,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Hello World</title>
+    <title> Hello Q2 Folks Michael Pack, Joe Hajovsky, Michael Schaefer!</title>
 </head>
 <body>
     <div>
-        Hello Q2 Folks Michael Pack, Joe Hajovsky, Michael Schaefer!
+        Hello Q2 Folks Michael Pack, Joe Hajovsky, Michael Schaefer! Maybe a game
     </div>
 
     <iframe src="https://www.google.com/logos/2010/pacman10-i.html" width="800" height="600"></iframe>
